fixing bootstrap css - footer stuck to bottom, header stays at top when get small, nav collapse works

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,10 +2,10 @@
  * This is a manifest file that'll automatically include all the stylesheets available in this directory
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
+ *= require bootstrap_and_overrides
  *= require fancybox
  *= require formtastic
  *= require vendor
- *= require bootstrap_and_overrides
  *= require scaffold
  *= require tipsy
  *= require indicator_menu_scales
@@ -14,8 +14,6 @@
  *= require data_table
   *= require_self
 */
-/* Eric Meyer's Reset CSS v2.0 - http://cssreset.com */
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
 
 
 /* clear floats */
@@ -73,6 +71,7 @@ h2 {
 }
 
 h3 {
+  margin: 0.5em 0;
   font-size: 14pt;
    font-family: Arial;
    color: #000;
@@ -95,7 +94,7 @@ hr {
 
 ul.standard, ol.standard, ul.standard ul, ol.standard ol,
 ul.standard ol, ol.standard ul {
-	margin-left: 40px;
+	margin-left: 1em;
 }
 
 ul.standard li {
